--- a/index.html
+++ b/index.html
@@ -13,23 +13,82 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="nav-info">
-                <h1 id="nav-text">Let's make <br> beautiful flowers a <br> part of your life.</h1>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
-                </p>
-                <button id="btn_shop">Shop Now</button>
-            </div>
-            <div class="nav-pics">
-                <img class="nav-pic" src="Flower Asset/pngwing 10.png" alt="">
-            </div>
-        </nav>
+       
     </header>
     <main>
         <section>
+            <div class="title-section">
+                <div class="title">
+                    <h1 id="title-text">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
+                    </p>
+                    <button id="btn_shop">Shop Now</button>
+                </div>
+                <div class="title-pics">
+                    <img class="title-pic" src="Flower Asset/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
             <div class="feature-section">
+                <div class="feature-info">
+                    <h2>Our Featured Flowers</h2>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+                    </p>
 
+                </div>
+                <div class="feature-tree">
+                    <div class="fature-box">
+                        <img class="fature-pic" src="Flower Asset/pngwing 6.png" alt="">
+                        <p>
+                            <u>Pink Flower Tree</u>
+                        </p>
+                    </div>
+                    <div class="fature-box1">
+                        <img class="fature-pic"  src="Flower Asset/pngwing 5.png" alt="">
+                        <p>
+                            <u>Pink Flower Tree</u>
+                        </p>
+                    </div>
+                    <div class="fature-box2">
+                        <img class="fature-pic"  src="Flower Asset/pngwing 7.png" alt="">
+                        <p>
+                            <u>Pink Flower Tree</u>
+                        </p>
+                    </div>
+                </div>
+                <div class="service">
+                    <div class="our-service">
+                        <img src="Flower Asset/Group 57.png" alt="">
+                        <p>
+                            Same Day Delivery. Click & Collect.
+                        </p>
+                    </div>
+                    <div class="service-time">
+                        <img src="Flower Asset/Group 58.png" alt="">
+                        <p>
+                            Fresh Flowers. Local Growers.
+                        </p>
+                    </div>
+                    <div class="service-help">
+                        <img src="Flower Asset/Group 59.png" alt="">
+                        <p>
+                            24/7 Free Support.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="hot-deal">
+                <div class="deal">
+
+                </div>
+                <div class="deal-pic">
+                    <img src="Flower Asset/pngwing 8.png" alt="">
+                </div>
             </div>
         </section>
     </main>
