--- a/index.html
+++ b/index.html
@@ -59,32 +59,39 @@
                         </p>
                     </div>
                 </div>
-                <div class="service">
-                    <div class="our-service">
-                        <img src="Flower Asset/Group 57.png" alt="">
-                        <p>
-                            Same Day Delivery. Click & Collect.
-                        </p>
-                    </div>
-                    <div class="service-time">
-                        <img src="Flower Asset/Group 58.png" alt="">
-                        <p>
-                            Fresh Flowers. Local Growers.
-                        </p>
-                    </div>
-                    <div class="service-help">
-                        <img src="Flower Asset/Group 59.png" alt="">
-                        <p>
-                            24/7 Free Support.
-                        </p>
-                    </div>
+                
                 </div>
             </div>
         </section>
         <section>
+            <div class="service">
+                <div class="our-service">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <p>
+                        Same Day Delivery. Click & Collect.
+                    </p>
+                </div>
+                <div class="service-time">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                    <p>
+                        Fresh Flowers. Local Growers.
+                    </p>
+                </div>
+                <div class="service-help">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                    <p>
+                        24/7 Free Support.
+                    </p>
+                </div>
+        </section>
+        <section>
             <div class="hot-deal">
                 <div class="deal">
-
+                    <h1>Hot Deal ! Sale Up To 25% <span id="off-color"> Off</span> </h1>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </p>
+                    <button>SIGN UP</button>
                 </div>
                 <div class="deal-pic">
                     <img src="Flower Asset/pngwing 8.png" alt="">
