Start a main marks section this assignment

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                 <div class="deal">
                     <h1>Hot Deal ! Sale Up To 25% <span id="off-color"> Off</span> </h1>
                     <p>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
                     </p>
-                    <button>SIGN UP</button>
+                  <button class="btn-sign-up">text me</button>
                 </div>
                 <div class="deal-pic">
-                    <img src="Flower Asset/pngwing 8.png" alt="">
+                    <img class="hot-deal-logo" src="Flower Asset/pngwing 8.png" alt="">
                 </div>
             </div>
         </section>
