--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="social">
+                <div class="social-name-text">
+                    <h2>
+                        Instagram
+                    </h2>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.
+                    </p>
+                </div>
+                <div class="item">
+                    <div class="item-pic">
+                        <img class="item-pic-size" src="Flower Asset/Flower 01.png" alt="">
+                    </div>
+                    <div class="item-pic">
+                        <img class="item-pic-size"  src="Flower Asset/Rectangle 4.png" alt="">
+                    </div>
+                    <div class="item-pic">
+                        <img class="item-pic-size"  src="Flower Asset/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="item-pic">
+                        <img class="item-pic-size"  src="Flower Asset/Rectangle 6.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
