full compleate my flower wesite

--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flower Shop</title>
-
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
-      </style>
-    
-    <link rel="stylesheet" href="style/style.css">
+      </style>  
+    <link rel="stylesheet" href="style/style.css"> 
+    <link rel="shortcut icon" href="Flower Asset/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
-       
+        <nav>
+            <div class="icon">
+                <img src="Flower Asset/logo.png" alt="">
+            </div>
+            <div class="menu-bar">
+                <ul>
+                    <li>Home</li>
+                    <li>Love & Romance</li>
+                    <li>Shop by</li>
+                    <li>about us</li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <section>
@@ -91,7 +102,7 @@
                     <p>
                         It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
                     </p>
-                  <button class="btn-sign-up">text me</button>
+                  <button class="btn-sign-up">SIGN UP</button>
                 </div>
                 <div class="deal-pic">
                     <img class="hot-deal-logo" src="Flower Asset/pngwing 8.png" alt="">
@@ -150,7 +161,7 @@
                 <p>
                     It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
                 </p>
-                <h6>&copy2020-2023, FlowerShop.com. All rights reserved. </h6>
+                <h6>&copy2018-2023, MYFlowerShop.com. All rights reserved. </h6>
             </div>
     </footer>
 </body>
